--- a/QV_Projekt/stylesheet.css
+++ b/QV_Projekt/stylesheet.css
@@ -1,3 +1,34 @@
-.body{
-    
+body {
+    background-image: url("includes/background.jpg");
+}
+
+.btn {
+    background-color: #41626a;
+}
+
+.title {
+    color: #41626a;
+    text-align: center;
+}
+
+.descr {
+    color: #41626a;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.text-signup {
+    color: #41626a;
+    margin-top: 50px;
+}
+
+.container {
+    background-color: white;
+    border-radius: 20px;
+    padding: 30px;
+    margin-top: 120px;
+}
+
+.form-check-label {
+    color: #41626a;
 }
